--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
-	"dependencies": {
-		"tailwindcss": "^4.1.15",
-		"@tailwindcss/cli": "^4.1.15"
-	}
+  "name": "rose-with-a-message",
+  "version": "1.0.0",
+  "description": "A beautiful rose animation webpage using Tailwind CSS",
+  "author": "CodesWithSubham",
+  "license": "MIT",
+  "type": "module",
+  "scripts": {
+    "dev": "pnpm dlx @tailwindcss/cli -i ./input.css -o ./docs/style.css --watch"
+  },
+  "dependencies": {
+    "tailwindcss": "^4.1.17"
+  }
 }
